# automation-auditor

./: .env.example  README.md  audit_report.md  pyproject.toml  run_auditor.py
reports/: final_report.md
src/: __init__.py  graph.py  state.py
src/nodes/: __init__.py  detectives.py  judges.py  justice.py
src/tools/: __init__.py  doc_tools.py  repo_tools.py
